[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scene/Arbeitsplatte/Mikrotiterplatte.gd" type="Script" id=1]
[ext_resource path="res://Texture/Mikrotiterplatte_W.png" type="Texture" id=2]

[node name="Mikrotiterplatte" type="Node2D" index="0"]

position = Vector2( 856.803, 496.044 )
scale = Vector2( 6, 4 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="PlatteHintergrund" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Platte_Control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[connection signal="mouse_entered" from="Platte_Control" to="." method="_on_Platte_Control_mouse_entered"]

[connection signal="mouse_exited" from="Platte_Control" to="." method="_on_Platte_Control_mouse_exited"]


